Bug 205722 - Incomplete error message when the autocompletion does not work in a Group.
Summary: Incomplete error message when the autocompletion does not work in a Group.
Status: VERIFIED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-30 20:50 UTC by Sabine Faure
Modified: 2009-09-03 02:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2009-08-30 20:50:31 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Configure Akonadi with an IMAP and Kolab resource.
- Launch Kaddressbook
- create a new Contact with a name that is not recognized by the autocompletion (ex:with a composed family name, John Smith-Miller. See bug# 205721). Click on 'Ok'
- Create a new Group and try to add the Contact that you have just created by ignoring the format and just typing the name (without the email address) .

A ''The Contact 'John Smith-Miller' is missing a name'' error message appears in a pop up dialogue.

But in fact the problem is not that the Contact is missing a name. It is more that it is missing an email address and most of all the correct format.

So the error message should be something like: ''The Contact 'John Smith-Miller' is missing an email address. Please use the following format 'name<email>' to enter it.''

Trunk, Svn Rev 1016607
Comment 1 Tobias Koenig 2009-08-30 23:04:44 UTC
SVN commit 1017538 by tokoe:

Give a more general message error as we can't find out
what part of the entry is missing exactly.

BUG: 205722


 M  +3 -12     contactgroupeditor.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1017538
Comment 2 Sabine Faure 2009-09-03 02:17:24 UTC
This is corrected now.

The error message is now '' The contact CONTACTNAME does not have the correct format. Use Name <email@address>''

Trunk, Svn Rev 1018367