Give a more general message error as we can't find out what part of the entry is missing exactly.

BUG: 205722

svn path=/trunk/KDE/kdepim/akonadi/contact/; revision=1017538